Fix T44921: Node editor, nodes position not maintained after Material panel changes

Also improved a bit behavior of adding new nodes, now they will not overlap that
badly. Still not ideal, but further improvements better not to happen at bcon4.